--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     font-family: "Merriweather", serif;
 }
+
+/* banner section  */
+
+.banner-container{
+    width: 1320px;
+    height: 600px;
+    margin: 0 auto;
+    margin-top: 50px;
+    background-image: url(/asset/Banner\ Image.png);
+    background-color: rgb(0,0,0,0.5);
+    background-blend-mode: overlay;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.banner-contant {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+    color: white;
+}
+
+.banner-contant h1{
+font-weight:900px;
+Font-size: 72px;
+}
+
+.banner-contant p{
+    Font-weight : 400px;
+    Font-size:32px;
+}
+
