--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ body{
     height: 600px;
     margin: 0 auto;
     margin-top: 50px;
-    background-image: url(/asset/Banner\ Image.png);
+    background-image: url(../asset/Banner\ Image.png);
     background-color: rgb(0,0,0,0.5);
     background-blend-mode: overlay;
     background-size: cover;
